--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -36,7 +36,7 @@
             </label>
         </div>
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Get, new {@id = "#ern-search-form"}))
+        @using (Html.BeginForm(null, null, null, FormMethod.Get, new { @action = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer) + "#providerSiteResults", @id = "ern-search-form" }))
         {
             @Html.HiddenFor(m => m.ProviderSiteErn)
             @Html.Hidden("FilterType", EmployerFilterType.Ern)
@@ -51,7 +51,7 @@
             </div>
         }
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Get, new {@id = "#name-location-search-form"}))
+        @using (Html.BeginForm(null, null, null, FormMethod.Get, new { @action = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer) + "#providerSiteResults", @id = "name-location-search-form" }))
         {
             @Html.HiddenFor(m => m.ProviderSiteErn)
             @Html.Hidden("FilterType", EmployerFilterType.NameAndLocation)
