Fixed bug when trying to create a vacancy after having a validation error in employers information page.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <div class="grid grid-1-1">
+        <div class="grid grid-1-1 visuallyhidden">
             <div class="blocklabel-single-container">
                 <div class="form-group inline clearfix blocklabel-single hide-nojs">
                     <a name="@Html.NameFor(m => m.IsEmployerLocationMainApprenticeshipLocation).ToString().ToLower()"></a>
